- refactoring - play command in context menu

--- a/Tagger/MainWindow.xaml
+++ b/Tagger/MainWindow.xaml
@@ -47,7 +47,11 @@
                  ItemsSource="{Binding FileItems}"
                  SelectedItem="{Binding SelectedItem}"
                   Name="_dataGrid">
-
+            <DataGrid.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Play" Command="{Binding PlayCommand}"/>
+                </ContextMenu>
+            </DataGrid.ContextMenu>
         </DataGrid>
 
 
